fix: bag view on mobile

--- a/media.css
+++ b/media.css
@@ -357,7 +357,7 @@
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
     .neutron {
         font-size: 1rem;
@@ -549,7 +549,59 @@
 }
 
 
-@media only screen and (max-width: 620px) {
+@media screen and (max-width: 620px) {
+
+    .navigation-item.signup-button a {
+        top: 20%;
+        left: -92%;
+    }
+
+    .header-button {
+        right: 18%; 
+    }
+
+    .security-privacy {
+        grid-row: 1;
+        grid-column: 1/4;
+    }
+
+    .security-encryption {
+        grid-row: 2;
+        grid-column: 1/4;
+    }
+
+    .security-email {
+        grid-row: 3;
+        grid-column: 1/4;
+    }
+
+    .donate {
+        grid-row: 2;
+        align-self: start;
+        padding-top:0;
+    }
+
+    .slider-wrap{
+        grid-row: 1;
+        top: -81%;
+    }
+
+    .download {
+        grid-row: 1;
+        bottom: 85px;
+    }
+}
+
+@media screen and (max-width: 540px) {
+
+    .language-item a {
+        font-size: 0.5rem;
+    }
+
+    .security-privacy h3, .security-encryption h3, .security-email h3 {
+        font-size: 0.7rem;
+    }
+
 
     .navigation-item.signup-button a {
         top: 20%;
